--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pratique d'examen H2023</title>
+    <style>
+      ul {
+        list-style-type: none;
+        display: flex;
+        gap: 5vw;
+      }
+      main {
+        display: flex;
+        gap: 5vw;
+      }
+      h1 {
+        color: red;
+      }
+      main {
+        background-color: blue;
+        color: white;
+        padding: 10px;
+      }
+      article {
+        background-color: darkcyan;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    hello world
+    <header>
+      <h1>Ceci est un site web</h1>
+      <nav>
+        <ul>
+          <li><a href="">Lien vers un site</a></li>
+          <li><a href="">Lien vers un site</a></li>
+          <li><a href="">Lien vers un site</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h2>Ceci est un article</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos
+          explicabo possimus incidunt recusandae quas corrupti hic delectus
+          beatae minus consequatur iure officia aspernatur laborum maxime,
+          voluptate asperiores impedit odit soluta!
+        </p>
+      </article>
+      <article>
+        <h2>Ceci est un article</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos
+          explicabo possimus incidunt recusandae quas corrupti hic delectus
+          beatae minus consequatur iure officia aspernatur laborum maxime,
+          voluptate asperiores impedit odit soluta!
+        </p>
+      </article>
+    </main>
   </body>
 </html>
